Fix for branch regex not showing

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -269,6 +269,10 @@ a:focus {
     width: 90%;
 }
 
+.w-95 {
+    width: 95% !important;
+}
+
 .w-100 {
     width: 100%;
 }
